[gd_scene load_steps=8 format=3 uid="uid://webm7yrtf8fp"]

[ext_resource type="Script" uid="uid://dfdr85whwhgm0" path="res://games/shield/glasun.gd" id="1_g3y8h"]
[ext_resource type="Texture2D" uid="uid://cblofhtv57gfu" path="res://games/shield/assets/Glasun.png" id="1_yyqmi"]
[ext_resource type="PackedScene" uid="uid://csfuach5v87a2" path="res://games/shield/health_component.tscn" id="2_4vntk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g3y8h"]
atlas = ExtResource("1_yyqmi")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_4vntk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3y8h")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_yyqmi"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_25wa0"]
radius = 171.0263

[node name="Glasun" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_g3y8h")

[node name="HealthComponent" parent="." instance=ExtResource("2_4vntk")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4vntk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yyqmi")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_yyqmi")

[node name="AttackArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_25wa0")

[node name="TimerBounceBolt" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
